Source/src/eos_Interface2003.f90

!*********************************************************************
!  Module for Fortran 2003 code to set constants used by EOSPAC
!  ------------------------------------------------------------
!  Filetype: (HEADER)
!  
!  Copyright -- see file named COPYRIGHTNOTICE
!  
!********************************************************************
module eos_Interface2003
  use iso_fortran_env
  use iso_c_binding

  implicit none
  integer, parameter :: EOS_CHAR = C_CHAR
  integer, parameter :: EOS_BOOLEAN = KIND(.TRUE.)
  !  integer, parameter :: EOS_BOOLEAN = C_BOOL
  integer, parameter :: EOS_INTEGER = C_INT
  integer, parameter :: EOS_REAL = C_DOUBLE
  integer(EOS_INTEGER), private, parameter :: idum = 1_EOS_INTEGER
  integer(EOS_INTEGER), private, parameter :: intSize = BIT_SIZE(idum)/8_EOS_INTEGER

  include 'eos_InterfaceFortranCommon.f90'  ! this is the code shared with the Fortran 90 module: eos_Interface

  public eos_GetErrorMessage, eos_GetPackedTables, eos_GetTableCmnts, eos_SetPackedTables, eos_SetDataFileName, eos_GetVersion

  ! C binding Interfaces

  interface eos_CheckExtrap
     pure subroutine eos_CheckExtrap_cfunc(tableHandle, nXYPairs, xVals, yVals, xyBounds, errorCode) &
          bind(C, name="eos_CheckExtrap")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: nXYPairs
       real(EOS_REAL), intent(in) :: xVals(nXYPairs)
       real(EOS_REAL), intent(in) :: yVals(nXYPairs)
       integer(EOS_INTEGER), intent(out) :: xyBounds(nXYPairs)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_CheckExtrap_cfunc
     pure subroutine eos_CheckExtrap_cfunc_scalar(tableHandle, nXYPairs, xVals, yVals, xyBounds, errorCode) &
          bind(C, name="eos_checkextrap_")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: nXYPairs
       real(EOS_REAL), intent(in) :: xVals
       real(EOS_REAL), intent(in) :: yVals
       integer(EOS_INTEGER), intent(out) :: xyBounds
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_CheckExtrap_cfunc_scalar
  end interface

  interface eos_CreateTables
     pure subroutine eos_CreateTables_cfunc(nTables, tableType, matID, tableHandles, errorCode) &
          bind(C, name="eos_CreateTables")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableType(nTables)
       integer(EOS_INTEGER), intent(in) :: matID(nTables)
       integer(EOS_INTEGER), intent(out) :: tableHandles(nTables)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_CreateTables_cfunc
     pure subroutine eos_CreateTables_cfunc_scalar(nTables, tableType, matID, tableHandles, errorCode) &
          bind(C, name="eos_createtables_")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableType
       integer(EOS_INTEGER), intent(in) :: matID
       integer(EOS_INTEGER), intent(out) :: tableHandles
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_CreateTables_cfunc_scalar
  end interface

  interface eos_DestroyAll
     pure subroutine eos_DestroyAll_cfunc(errorcode) &
          bind(C, name="eos_DestroyAll")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_DestroyAll_cfunc
  end interface

  interface eos_DestroyTables
     pure subroutine eos_DestroyTables_cfunc(nTables, tableHandles, errorCode) &
          bind(C, name="eos_DestroyTables")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableHandles(nTables)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_DestroyTables_cfunc
     pure subroutine eos_DestroyTables_cfunc_scalar(nTables, tableHandles, errorCode) &
          bind(C, name="eos_destroytables_")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableHandles
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_DestroyTables_cfunc_scalar
  end interface

  interface eos_GetErrorCode
     pure subroutine eos_GetErrorCode_cfunc(tableHandle, errorCode) &
          bind(C, name="eos_GetErrorCode")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_GetErrorCode_cfunc
  end interface

  interface eos_GetPackedTablesSize
     pure subroutine eos_GetPackedTablesSize_cfunc(nTables, tableHandles, packedTablesSize, errorCode) &
          bind(C, name="eos_GetPackedTablesSize")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableHandles(nTables)
       integer(EOS_INTEGER), intent(out) :: packedTablesSize
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_GetPackedTablesSize_cfunc
     pure subroutine eos_GetPackedTablesSize_cfunc_scalar(nTables, tableHandles, packedTablesSize, errorCode) &
          bind(C, name="eos_getpackedtablessize_")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableHandles
       integer(EOS_INTEGER), intent(out) :: packedTablesSize
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_GetPackedTablesSize_cfunc_scalar
  end interface

  interface eos_GetTableInfo
     pure subroutine eos_GetTableInfo_cfunc(tableHandle, numInfoItems, infoItems, infoVals, errorCode) &
          bind(C, name="eos_GetTableInfo")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: numInfoItems
       integer(EOS_INTEGER), intent(in) :: infoItems(numInfoItems)
       real(EOS_REAL), intent(out) :: infoVals(numInfoItems)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_GetTableInfo_cfunc
     pure subroutine eos_GetTableInfo_cfunc_scalar(tableHandle, numInfoItems, infoItems, infoVals, errorCode) &
          bind(C, name="eos_gettableinfo_")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: numInfoItems
       integer(EOS_INTEGER), intent(in) :: infoItems
       real(EOS_REAL), intent(out) :: infoVals
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_GetTableInfo_cfunc_scalar
  end interface

  interface eos_Interpolate
     pure subroutine eos_Interpolate_cfunc(tableHandle, nXYPairs, xVals, yVals, fVals, dFx, dFy, errorCode) &
          bind(C, name="eos_Interpolate")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: nXYPairs
       real(EOS_REAL), intent(in) :: xVals(*)
       real(EOS_REAL), intent(in) :: yVals(*)
       real(EOS_REAL), intent(out) :: fVals(*)
       real(EOS_REAL), intent(out) :: dFx(*)
       real(EOS_REAL), intent(out) :: dFy(*)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_Interpolate_cfunc
     pure subroutine eos_Interpolate_cfunc_scalar(tableHandle, nXYPairs, xVals, yVals, fVals, dFx, dFy, errorCode) &
          bind(C, name="eos_interpolate_")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: nXYPairs
       real(EOS_REAL), intent(in) :: xVals
       real(EOS_REAL), intent(in) :: yVals
       real(EOS_REAL), intent(out) :: fVals
       real(EOS_REAL), intent(out) :: dFx
       real(EOS_REAL), intent(out) :: dFy
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_Interpolate_cfunc_scalar
  end interface

  interface eos_LoadTables
     pure subroutine eos_LoadTables_cfunc(nTables, tableHandles, errorCode) &
          bind(C, name="eos_LoadTables")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(out) :: tableHandles(nTables)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_LoadTables_cfunc
     pure subroutine eos_LoadTables_cfunc_scalar(nTables, tableHandles, errorCode) &
          bind(C, name="eos_loadtables_")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(out) :: tableHandles
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_LoadTables_cfunc_scalar
  end interface

  interface eos_Mix
     pure subroutine eos_Mix_cfunc(nTables, tableHandles, nXYPairs, concInMix, xVals, yVals, fVals, dFx, dFy, errorCode) &
          bind(C, name="eos_Mix")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableHandles(nTables)
       integer(EOS_INTEGER), intent(in) :: nXYPairs
       real(EOS_REAL), intent(in) :: concInMix(nXYPairs, nTables)
       real(EOS_REAL), intent(in) :: xVals(nXYPairs)
       real(EOS_REAL), intent(in) :: yVals(nXYPairs)
       real(EOS_REAL), intent(out) :: fVals(nXYPairs)
       real(EOS_REAL), intent(out) :: dFx(nXYPairs)
       real(EOS_REAL), intent(out) :: dFy(nXYPairs)
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_Mix_cfunc
     pure subroutine eos_Mix_cfunc_scalar(nTables, tableHandles, nXYPairs, concInMix, xVals, yVals, fVals, dFx, dFy, errorCode) &
          bind(C, name="eos_mix_")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: nTables
       integer(EOS_INTEGER), intent(in) :: tableHandles(nTables)
       integer(EOS_INTEGER), intent(in) :: nXYPairs
       real(EOS_REAL), intent(in) :: concInMix(nXYPairs, nTables)
       real(EOS_REAL), intent(in) :: xVals
       real(EOS_REAL), intent(in) :: yVals
       real(EOS_REAL), intent(out) :: fVals
       real(EOS_REAL), intent(out) :: dFx
       real(EOS_REAL), intent(out) :: dFy
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_Mix_cfunc_scalar
  end interface

  interface eos_SetOption
     pure subroutine eos_SetOption_cfunc(tableHandle, tableOption, tableOptionVal, errorCode) &
          bind(C, name="eos_SetOption")
       import :: EOS_INTEGER, EOS_REAL
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: tableOption
       real(EOS_REAL), intent(in) :: tableOptionVal
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_SetOption_cfunc
  end interface

  interface eos_ResetOption
     pure subroutine eos_ResetOption_cfunc(tableHandle, tableOption, errorCode) &
          bind(C, name="eos_ResetOption")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: tableHandle
       integer(EOS_INTEGER), intent(in) :: tableOption
       integer(EOS_INTEGER), intent(out) :: errorCode
     end subroutine eos_ResetOption_cfunc
  end interface

  interface eos_GetMaxDataFileNameLength
     pure subroutine eos_GetMaxDataFileNameLength_cfunc(max_length) &
          bind(C, name="eos_GetMaxDataFileNameLength")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(out) :: max_length
     end subroutine eos_GetMaxDataFileNameLength_cfunc
  end interface

  interface eos_ErrorCodesEqual_c
     pure subroutine eos_ErrorCodesEqual_INTEGER(err1, err2, result) &
          bind(C, name="eos_ErrorCodesEqual")
       import :: EOS_INTEGER
       integer(EOS_INTEGER), intent(in) :: err1
       integer(EOS_INTEGER), intent(in) :: err2
       integer(EOS_INTEGER), intent(out) :: result
     end subroutine eos_ErrorCodesEqual_INTEGER
  end interface
